--- a/style.css
+++ b/style.css
@@ -328,7 +328,10 @@ p {
 }
 
 .btn {
-  display: inline-block;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   padding: 0.8rem 2rem;
   border-radius: 50px;
   font-weight: 700;
