--- a/style.css
+++ b/style.css
@@ -569,6 +569,8 @@ footer {
 }
 
 @media (min-width: 900px) {
+  .map-title {
+    display: none;
   .programacao-grid {
     grid-template-columns: 1fr 1fr;
   }
