--- a/style.css
+++ b/style.css
@@ -572,7 +572,9 @@ footer {
   .map-title {
     display: none;
   .programacao-grid {
-    grid-template-columns: 1fr 1fr;
+    display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 3rem;
   }
 }
 
