--- a/style.css
+++ b/style.css
@@ -571,10 +571,15 @@ footer {
 @media (min-width: 900px) {
   .map-title {
     display: none;
+  }
+
   .programacao-grid {
     display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 3rem;
+    grid-template-columns: 1fr 1fr;
+    gap: 3rem;
+
+    align-items: center;      
+    justify-items: center;   
   }
 }
 
