--- a/style.css
+++ b/style.css
@@ -763,8 +763,7 @@ footer {
 
 .gruv-button div {
   background: var(--gruv-background);
-  padding: 0.15em 0.6em 0.1em 0.6em;
-  /* Added slightly more top padding to push text down visually */
+  padding: 0.4em 1em;
   border-radius: calc(var(--gruv-border-radius) - var(--gruv-border-size));
   color: var(--gruv-foreground);
   font-weight: bold;
@@ -773,7 +772,6 @@ footer {
   align-items: center;
   justify-content: center;
   line-height: 1;
-  /* Force line-height */
 }
 
 /* Development Label Container */
